--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,6 +13,7 @@
             <input type="email" name="email"><br>
             <label>Telephone</label>
             <input type="text" name="phone"><br>
+            <br>
             <label>Type of Shoe</label>
             <input type="text" name="shoe_type"><br>
             <label>Rand Repair</label>
@@ -37,11 +38,13 @@
                 <option value="Grip2">Vibram XS Grip2 (3.5mm)</option>
                 <option value="Whatever is appropriate" selected>rubberAppropriate</option>
             </datalist><br>
+            <br>
             <label>Address</label>
-            <textarea name="address" rows="8" cols="30"
+            <textarea name="address" rows="5"
                           placeholder="Enter your address here."></textarea><br>
+            <br>
             <label>Comments</label>
-            <textarea name="comments" rows="10" cols="30"
+            <textarea name="comments" rows="8"
                           placeholder="Put any comments here."></textarea><br>
         </form></div>
         <p>I'll email you an invoice...</p>
